# docs

./: .config  .envrc  .gitignore  404.html  50-snagboot.rules  README.md  TODO.md  index.html  mkdocs.yml  ruff.toml  sitemap.xml
.github/workflows/: actions.yml  conditional_workflow.yml  env_variables.yml  linter.yml  lots_of_jobs.yml  manual_workflow.yml  python_linter.yml  run_on_docker.yml  update-docs.yml
about/: index.html
arm_assembly/: README.md  index.html
arm_assembly/abi/: index.html
arm_assembly/asm_testing_area/: Makefile  debug.gdb  linker_script.ld
arm_assembly/avr/: index.html
arm_assembly/binutils/: buildutils.sh  index.html  (+2 more)
bare_metal/: index.html
bash/: README.md
build_systems/: index.html
buildroot/: external.desc  external.mk
ci/: index.html
cmake/: CMakeLists.txt  README.md
cmake/math/: math.cpp
cmake/src/: tutorial.cpp
docker/: .dockerignore  .env  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
docs/: index.md
embedded/: README.md
ftdi/: Makefile
gdb/: index.html
gtest/: CMakeLists.txt  README.md
hardware_probing/: index.html
kconfig/: .gitignore  Kconfig  Makefile  README.md
latex/: New_IEEEtran_how-to.tex  bare_jrnl_new_sample4.tex  main.tex
linker/: Makefile  linker.S  linker_script.ld
linters/: index.html
makefile/: Makefile  linker_script.ld
mkdocs/: index.html
ncurses/: .clang-tidy  Makefile
openocd/: eeprom.cfg  eeprom.new
python/: sample_script.py
qemu/: index.html
search/: search_index.json
templates/: c_header_template.h  c_source_template.c
zephyr/: index.html
(+269 files in other folders)
